# voxel_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  Makefile  OpenVoxelEngineVS.cmd  imgui.ini  launch.vs.json  main  main.bk  main.cpp  vcpkg.json
Builds/: AmbientOcclusionPass.cpp  AssetPaths.cpp  AssetPaths.h  AssimpModelImporter.cpp  AssimpModelImporter.h  AssimpModelImporterMaterials.cpp  AsyncChunkMeshScheduler.cpp  AsyncChunkMeshScheduler.h  BackgroundTaskQueue.h  BackgroundTaskQueueWorkers.cpp  Block.h  BlockInteraction.h  BlockPbrMaterials.cpp  BlockPbrMaterials.h  BlockRaycaster.cpp  BlockRaycaster.h  BlockRegistry.cpp  BlockRegistry.h  BlockSelection.h  BlockSelectionCube.h  BlockSelectionCubeFaces.cpp  BlockSelectionCubeSideFaces.cpp  BlockTextureCache.cpp  BlockTextureCache.h  CTestTestfile.cmake  Camera.cpp  Camera.h  CascadedShadowMap.h  Chunk.cpp  Chunk.h  ChunkDecorations.cpp  ChunkFaceEmitter.cpp  ChunkFaceOffsets.cpp  ChunkGenerationState.cpp  ChunkGpuMesh.cpp  ChunkGpuMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  ChunkMeshCollector.cpp  ChunkMeshCollector.h  (+216 more)
Tests/: AssetPathTests.cpp  BackgroundTaskQueueSchedulingTests.inl  BackgroundTaskQueueTests.inl  BlockRegistryTests.inl  ChunkGpuMeshTests.inl  ChunkMeshDiagnosticsTests.inl  EngineCreateInfoValidationTests.inl  EngineSmokeAssetTests.inl  EngineSmokeCoreTests.inl  EngineSmokeImporterFixture.inl  EngineSmokeLauncherTests.inl  EngineSmokeTests.cpp  FrameGraphTests.cpp  GameplayInputTests.inl  GraphicsCommandTests.cpp  GraphicsGeometryTests.cpp  LoggerTests.inl  MouseLookInputTests.inl  NetworkPacketFramingTests.inl  NetworkProtocolTests.cpp  NetworkSerializationTests.inl  PublicApiAdvancedConfigTests.inl  PublicApiCompileTests.cpp  PublicApiDemoPresetTests.inl  PublicApiEngineConfigTests.inl  PublicApiHeaderSmoke.cpp  PublicApiHeadersOnlySmoke.cpp  PublicApiValidationTests.inl  PublicApiWorldTests.inl  RenderBackendCapabilityTests.inl  RenderBackendSelectionTests.inl  RenderBackendTests.cpp  RenderBackendVulkanTests.inl  RuntimeInputRouterTests.inl  WindowTests.cpp  WorldBlockEditTests.inl  WorldComputeTerrainTests.inl  WorldCoordinateTests.cpp  WorldMeshAndMetricsTests.inl  WorldMetricsTests.inl  (+1 more)
assets/temp/: pack.mcmeta
cmake/: ApiDocs.cmake  Applications.cmake  CompilerWarnings.cmake  Dependencies.cmake  EngineTests.cmake  Examples.cmake  ProjectOptions.cmake  PublicSdk.cmake  RuntimeSmokeTests.cmake  Sanitizers.cmake  SubsystemTargets.cmake  TargetLinks.cmake  VulkanShaders.cmake
docs/: ArchitectureRoadmap.md  BuildOrganization.md  CodeStyle.md
examples/: custom_scene.cpp  minimal.cpp  model_demos.cpp  showcase.cpp  world_edit.cpp
include/voxel/: Assets.h  BlockAliases.h  BlockTypes.h  Blocks.h  Camera.h  Engine.h  EngineConfig.h  EngineConfigTypes.h  EngineRun.h  Materials.h  Runtime.h  Scene.h  Voxel.h  World.h
items/: Texture-Packs.com.txt
shaders/vulkan/: voxel_chunk.frag  voxel_chunk.vert
src/api/: CommandLineDemoCatalog.cpp  CommandLineLauncher.cpp  CommandLineLauncher.h  CommandLineLauncherInternal.h  CommandLineLauncherParsing.cpp  CommandLineSmokeFrames.cpp  Engine.cpp  EngineCameraWindow.inl  EngineConfigBlockMapping.inl  EngineConfigFluent.inl  EngineConfigRuntimeOptions.inl  EngineConfigTranslator.cpp  EngineConfigTranslatorDefault.inl  EngineConfigTranslatorHelpers.inl  EngineConfigTranslatorImpl.inl  EngineConfigValidation.cpp  EngineConfigValidationApi.inl  EngineConfigValidationDefault.inl  EngineConfigValidationHelpers.inl  EngineConfigValidatorImpl.inl  EngineDemoArcadeBase.inl  EngineDemoArcadeCanvas.inl  EngineDemoArcadeScenes.inl  EngineDemoBasicPresets.inl  EngineDemoPresets.cpp  EngineDemoRuntimePresets.inl  EngineDemoShortcutPresets.inl  EngineInstance.inl  EngineRunShortcuts.inl  EngineRuntimeApi.cpp  EngineRuntimeBridge.cpp  EngineRuntimeBridge.h  EngineSceneApi.cpp  EngineSceneAssets.inl  EngineSceneGraph.inl  EngineSceneLighting.inl  EngineSceneMaterial.inl  EngineWorldApi.cpp  EngineWorldBasics.inl  EngineWorldEdits.inl  (+6 more)
src/app/: EditorDemoState.cpp  EditorDemoState.h  EditorGui.cpp  EditorGui.h  EditorGuiPanel.cpp  EditorRuntimeController.cpp  EditorRuntimeController.h  Engine.cpp  Engine.h  EngineCameraMouseInput.cpp  EngineClouds.cpp  EngineConfiguration.cpp  EngineConfiguration.h  EngineDebugRender.cpp  EngineFrame.cpp  EngineLifecycle.cpp  EnginePlayerBlockInput.cpp  EnginePlayerMovement.cpp  EngineRender.cpp  EngineRun.cpp  EngineRuntime.cpp  EngineRuntime.h  EngineRuntimeEnvironment.inl  EngineRuntimeFrame.cpp  EngineRuntimeFrameCallbacks.inl  EngineRuntimeFrameDispatch.inl  EngineRuntimeFrameEnd.inl  EngineRuntimeFrameOpenGL.inl  EngineRuntimeFrameVulkanInput.inl  EngineRuntimeLifecycle.inl  EngineRuntimeShutdown.inl  EngineRuntimeSystems.inl  EngineRuntimeVulkanInput.inl  EngineRuntimeWorldEdits.inl  EngineScreen.h  EngineState.h  GameController.cpp  GameController.h  GameControllerFrame.inl  GameControllerMovement.inl  (+65 more)
src/core/: AssetPaths.cpp  AssetPaths.h  AssetRootDiscovery.cpp  AssetRootDiscovery.h  BackgroundTaskQueue.cpp  BackgroundTaskQueue.h  BackgroundTaskQueueScheduling.cpp  BackgroundTaskQueueTypes.h  BackgroundTaskQueueWorkers.cpp  ComponentPool.h  CoreTypes.h  EcsWorld.cpp  EcsWorld.h  EntityRegistry.cpp  EntityRegistry.h  ExecutablePath.cpp  ExecutablePath.h  FluidGrid.cpp  FluidGrid.h  FluidGridSampling.cpp  FrameTimer.cpp  FrameTimer.h  InverseKinematicsChain.cpp  LinearMemoryResource.cpp  LinearMemoryResource.h  LogCategory.h  LogFormatter.cpp  LogFormatter.h  LogMacros.h  LogRecord.h  Logger.cpp  Logger.h  LoggerConfiguration.h  LoggerService.cpp  LoggerService.h  MemoryArena.cpp  NavierStokesFluidAdvection.cpp  NavierStokesFluidProjection.cpp  NavierStokesFluidSimulation.cpp  NavierStokesFluidSimulation.h  (+15 more)
src/network/: MultiplayerClient.cpp  MultiplayerClient.h  MultiplayerClientMessages.cpp  MultiplayerServer.cpp  MultiplayerServer.h  MultiplayerServerBroadcast.cpp  MultiplayerServerConnections.cpp  NetworkAsioRuntime.h  NetworkBlockReplication.cpp  NetworkBlockReplication.h  NetworkDeserializers.inl  (+16 more)
(+309 files in other folders)
